--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
   "name": "nuxt-strapi-postgres",
   "version": "1.0.0",
+  "engines": {
+    "node": "12.20.2",
+    "npm": "6.14.6",
+    "yarn": "1.22.5"
+  },
   "private": true,
   "scripts": {
     "dev": "nuxt-ts",
