finally! I followed the instructions here, https://dev.to/alex_barashkov/using-docker-for-nodejs-in-development-and-production-3cgp, seems like the issue was with doing kinda of a reverse symlink from the container back to my host machine for the node_modules folder

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,10 +7,12 @@ services:
       context: .
       target: dev
     volumes:
-      - .:/app
+      - .:/usr/src/app
+      - /usr/src/app/node_modules
     command: yarn dev
     ports:
       - "3000:3000"
+      - "9229:9229" # for debugging
     expose:
       - "3000"
     restart: always
