--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -55,12 +55,16 @@ services:
       # - ./db:/var/lib/postgresql/data
       # - /tmp:/tmp
       # - strapidata:/data/db
-      - pgdata:/var/lib/postgresql/data/
       - ./sql/data.sql:/docker-entrypoint-initdb.d/data.sql
+      - pgdata:/var/lib/postgresql/data/
     environment:
       POSTGRES_USER: ${DATABASE_USERNAME}
       POSTGRES_PASSWORD: ${DATABASE_PASSWORD}
       POSTGRES_DB: ${DATABASE_NAME}
+    ports:
+      - "5432:5432"
+    expose:
+      - "5432"
   
   pgadmin-compose:
     image: dpage/pgadmin4
